--- a/src/scss/components/_MoviesCards.scss
+++ b/src/scss/components/_MoviesCards.scss
@@ -11,7 +11,7 @@
 
   @include sm {
     &:not(:first-child) {
-      border-top: 1px solid map-get($color, primary-light);
+      border-top: 1px solid map-get($color, light-gray);
       padding-top: 2.5rem;
     }
   }
