--- a/src/scss/components/_btns.scss
+++ b/src/scss/components/_btns.scss
@@ -80,3 +80,38 @@
     }
   }
 }
+
+.expand-btn {
+  @include rounded-full;
+  @include flex($ai: center, $jc: center);
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  appearance: none;
+  z-index: 5;
+  width: 2.5rem;
+  height: 2.5rem;
+  margin: 0;
+  cursor: pointer;
+  background-color: map-get($color, primary);
+
+  @include hover-query {
+    &:hover {
+      @include hover-bg-color(map-get($color, primary));
+    }
+  }
+
+  &::before {
+    font: var(--fa-font-solid);
+    @include text(xl);
+    content: "\f078";
+  }
+
+  // 勾選狀態
+  &:checked {
+    &::before {
+      transform: rotate(180deg);
+    }
+  }
+}
