--- a/src/scss/animation/_animation.scss
+++ b/src/scss/animation/_animation.scss
@@ -28,3 +28,19 @@
     // transform: translateX(100vw);
   }
 }
+
+@keyframes intersection {
+  0% {
+    opacity: 0;
+    // transform: translateY(20px);
+  }
+
+  30% {
+    transform: translateY(30px);
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
