[修改] 調整 nav 展開與收合 transition

--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,7 +1,7 @@
 @forward "Header";
 @forward "btns";
-@forward "MovieSwiper";
 @forward "DetailCard";
-@forward "GenresSlide";
+@forward "GenresSwiper";
 @forward "MoviesCards";
 @forward "card";
+@forward "swiper";
