--- a/src/scss/components/_Header.scss
+++ b/src/scss/components/_Header.scss
@@ -5,8 +5,8 @@
   position: sticky;
   top: 0;
   z-index: 30;
-  height: deep-map-get($height, header, lg);
   flex: 1 0 auto;
+  height: deep-map-get($height, header, lg);
   padding-left: deep-map-get($x-spacing, lg);
   padding-right: deep-map-get($x-spacing, lg);
   border-bottom: 1px solid rgb(213, 108, 80);
@@ -90,6 +90,7 @@
   }
 }
 
+// * nav
 .nav {
   @include flex($ai: center);
   position: relative;
@@ -97,12 +98,7 @@
   column-gap: 1.5rem;
   margin-left: 3.5rem;
 
-  // @for $i from 1 through 6 {
-  //   & > :nth-child(#{$i}) {
-  //     animation: slide-right 850ms ease-in-out #{$i * 50}ms;
-  //   }
-  // }
-
+  // breakpoint md 以下
   @include md {
     opacity: 0;
     visibility: hidden;
@@ -123,10 +119,20 @@
     padding: 3rem 0;
     margin-left: auto;
     margin-right: auto;
-    background-color: rgba(0, 0, 0, 0.8);
 
-    transition: map-get($transition, 500);
+    background-color: rgba(0, 0, 0, 0.8);
+    transition: map-get($transition, 800);
     transition-property: visibility, opacity;
+
+    // 將 nav 的所有直系子層(.nav__link) 設定 nav 開啟前的樣式
+    @for $i from 1 through 6 {
+      & > :nth-child(#{$i}) {
+        opacity: 0;
+        transform: translateX(9.375rem);
+        transition: ease-in-out 500ms #{$i * 100}ms;
+        transition-property: opacity, transform;
+      }
+    }
   }
 
   @include sm {
@@ -138,14 +144,11 @@
       opacity: 1;
       visibility: visible;
 
+      // 將 nav 的所有直系子層(.nav__link) 設定 nav 開啟後的樣式
       @for $i from 1 through 6 {
         & > :nth-child(#{$i}) {
-          animation: slide-left 850ms ease-in-out #{$i * 50}ms forwards;
-
-          &::before {
-            // nav-open 套用後，顯示 .nav__link::before 的底線
-            opacity: 1;
-          }
+          opacity: 1;
+          transform: translateX(0);
         }
       }
     }
@@ -159,7 +162,7 @@
 
     @include md {
       @include text(xl);
-      // transform: translateX(100vw);
+      opacity: 0;
     }
 
     // * .nav__link hover 狀態
