--- a/src/scss/base/_global-styles.scss
+++ b/src/scss/base/_global-styles.scss
@@ -23,7 +23,6 @@ body {
     height: 100vh;
     overflow-y: scroll;
 }
-
 a {
     text-decoration: none;
     color: deep-map-get($color, primary);
@@ -41,6 +40,20 @@ h5,
 h6 {
     font-family: "Oswald", sans-serif;
     letter-spacing: deep-map-get($text, spacing, wide);
+}
+
+#root,
+.App {
+    height: 100%;
+}
+
+main {
+    min-height: calc(100% - deep-map-get($height, header, lg));
+    
+    & > :not(.home, .movie-detail) {
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+    }
 }
 
 .container {
