--- a/src/scss/page/_NotFound.scss
+++ b/src/scss/page/_NotFound.scss
@@ -1,7 +1,13 @@
 @use "../abstracts" as *;
 
 .not-found {
-  @include x-spacing;
+  @include flex($jc: center, $ai: center);
+  width: 100%;
+  height: calc(100vh - deep-map-get($height, header, lg));
+
+  .container {
+    @include flex($dir: column, $ai: center);
+  }
 
   &__img {
     position: absolute;
@@ -12,7 +18,6 @@
 
     img {
       width: 100%;
-      height: calc(100% - deep-map-get($height, header, lg));
       height: 100%;
       object-fit: cover;
       object-position: bottom;
@@ -28,5 +33,11 @@
   }
 
   &__layout-title {
+    text-align: center;
+  }
+
+  &__btn {
+    display: inline-block;
+    margin-top: 3rem;
   }
 }
