[修改] 修改導向到 Movies 的 route 寫法，並在 genres 的部分新增導向至 notfound 的寫法

--- a/src/scss/page/_Watchlist.scss
+++ b/src/scss/page/_Watchlist.scss
@@ -2,8 +2,8 @@
 
 .watchlist {
   @include x-spacing;
-  // padding-top: 3rem;
-  // padding-bottom: 3rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 
   &__header {
     @include flex($ai: center, $jc: space-between);
