--- a/src/scss/page/_Movies.scss
+++ b/src/scss/page/_Movies.scss
@@ -1,7 +1,5 @@
 @use "../abstracts" as *;
 
 .movies {
-  @include x-spacing;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  @include main-layout;
 }
