--- a/src/scss/page/_Watchlist.scss
+++ b/src/scss/page/_Watchlist.scss
@@ -1,9 +1,7 @@
 @use "../abstracts" as *;
 
 .watchlist {
-  @include x-spacing;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  @include main-layout;
 
   &__header {
     @include flex($ai: center, $jc: space-between);
