--- a/src/scss/page/_Home.scss
+++ b/src/scss/page/_Home.scss
@@ -39,7 +39,8 @@
     position: relative;
     display: block;
     width: 100%;
-    height: calc(100vh - deep-map-get($height, header, lg));
+    // height: calc(100vh - deep-map-get($height, header, lg));
+    height: 100vh;
 
     @include sm {
       height: calc(100vh - deep-map-get($height, header, sm));
@@ -54,11 +55,10 @@
       position: absolute;
       left: 0;
       bottom: 0;
-      background-image: linear-gradient(rgb(0 0 0 / 20%), rgb(0 0 0));
+      background-image: linear-gradient(rgb(0 0 0 / 15%), rgb(0 0 0));
       width: 100%;
       height: 100%;
       z-index: 5;
-      transition: all ease-in-out 1000ms;
     }
 
     // @ backdrop 將於 breakpoint < md 時被隱藏，替換成 poster
