--- a/src/scss/page/_MovieDetail.scss
+++ b/src/scss/page/_MovieDetail.scss
@@ -4,26 +4,30 @@
   position: relative;
 
   // * 共通樣式設定
-  // 除了首個 section 之外，其餘的 sectioni 都套用以下樣式:
+  // 除了首個 section(.movie-detail__intro) 之外，其餘的 sectioni 都套用以下樣式:
   > section:not(:first-child) {
-    margin-top: 3rem;
+    padding-top: 7rem;
+
+    // margin-top: 3rem;
     // opacity: 0;
 
     // 每個 section 內的 container 加上一條 border-top
-    .container {
-      border-top: 1px solid #333;
-      padding-top: 3rem;
-    }
+    // .container {
+    //   border-top: 1px solid #333;
+    //   padding-top: 3rem;
+    // }
   }
 
   .layout-title {
-    margin-bottom: 1.5rem;
+    padding-bottom: 2rem;
+    margin-bottom: 2rem;
+    border-bottom: 1px solid map-get($color, light-gray);
   }
 
   // * 頂部介紹區塊
   &__intro {
     display: grid;
-    height: calc(100vh - 90px);
+    height: 100vh;
 
     @include lg {
       height: auto;
@@ -38,7 +42,8 @@
     z-index: -1;
     overflow: hidden;
     width: 100%;
-    max-height: 80vh;
+    // max-height: 80vh;
+    max-height: 90vh;
 
     @include lg {
       align-self: flex-start;
@@ -46,6 +51,9 @@
 
     img {
       width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: top;
     }
 
     &::before {
@@ -115,26 +123,51 @@
     }
   }
 
+  // 資訊區(上映日期、評分、放映時長)
+  &__info {
+    & > p:not(:first-child) {
+      display: flex;
+      &::before {
+        content: "";
+        display: block;
+        width: 1px;
+        height: 100%;
+        background-color: map-get($color, primary-dark);
+      }
+
+      i {
+        margin-left: 1.5rem;
+      }
+    }
+
+    i {
+      margin-right: 0.5rem;
+    }
+  }
+
   // 文字介紹
   &__overview {
     @include text(xl);
-    // @ 限制行數
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 3; /* 行數 */
-    -webkit-box-orient: vertical;
-    white-space: normal;
-    text-overflow: ellipsis;
 
-    @include lg {
-      // lg 以下，解除行數限制
-      overflow: visible;
-      display: inline;
-      -webkit-line-clamp: none; /* 行數 */
-      -webkit-box-orient: vertical;
-      white-space: normal;
-      text-overflow: clip;
-    }
+    // ! 以下為行數限制相關設定，暫時禁用
+    // @ 限制行數
+    // overflow: hidden;
+    // display: -webkit-box;
+    // -webkit-line-clamp: 3; /* 行數 */
+    // -webkit-box-orient: vertical;
+    // white-space: normal;
+    // text-overflow: ellipsis;
+
+    // @include lg {
+    // lg 以下，解除行數限制
+    // overflow: visible;
+    // display: inline;
+    // -webkit-line-clamp: none; /* 行數 */
+    // -webkit-box-orient: vertical;
+    // white-space: normal;
+    // text-overflow: clip;
+    // }
+    // ! ----------
 
     @include sm {
       @include text(lg);
@@ -164,7 +197,7 @@
     }
   }
 
-  // * cast
+  // * cast (演員列表)
   &__cast {
     $block: &;
     @include x-spacing;
@@ -201,7 +234,8 @@
     }
 
     &-cards {
-      @include flex($jc: space-between, $wrap: wrap);
+      @include flex($wrap: wrap);
+      // @include flex($jc: space-between, $wrap: wrap);
       row-gap: 2rem;
 
       @include md {
@@ -250,11 +284,13 @@
       }
     }
 
-    &-info {
+    // cast 文字區
+    &-text {
       @include flex($dir: column);
       padding-left: 1.5rem;
       padding-right: 1.5rem;
 
+      // 人名
       span:nth-child(1) {
         font-weight: bold;
         @include text(2xl);
@@ -264,6 +300,7 @@
         }
       }
 
+      // 擔任角色名
       span:nth-child(2) {
         @include text(xl);
         color: map-get($color, primary-dark);
@@ -298,14 +335,6 @@
     height: 100%;
     border: 0;
   }
-
-  // &__video,
-  // &__similar {
-  // .container {
-  //   border-top: 1px solid #333;
-  //   padding-top: 2rem;
-  // }
-  // }
 
   // * Similar Movies swiper (相似電影 swiper)
   &__similar {
