--- a/src/scss/page/_Search.scss
+++ b/src/scss/page/_Search.scss
@@ -1,7 +1,8 @@
 @use "../abstracts" as *;
 
 .search {
-  margin-top: 3rem;
+  @include main-layout;
+  // margin-top: 3rem;
   padding-left: 2.25rem;
   padding-right: 2.25rem;
 
