--- a/src/scss/components/_Header.scss
+++ b/src/scss/components/_Header.scss
@@ -34,13 +34,13 @@
   }
 
   &__logo {
-    @include text(2xl);
+    @include text(3xl);
     white-space: nowrap;
     font-weight: bold;
     color: map-get($color, tertiary);
 
     @include sm {
-      @include text(xl);
+      @include text(2xl);
     }
 
     i {
@@ -63,13 +63,13 @@
       pointer-events: none;
 
       &:not(:first-child) {
-        margin-top: 6px;
+        margin-top: 0.375rem;
       }
     }
 
     &.active div {
       &:nth-child(1) {
-        transform: translateY(8px) rotate(45deg);
+        transform: translateY(0.5rem) rotate(45deg);
       }
 
       &:nth-child(2) {
@@ -78,7 +78,7 @@
       }
 
       &:nth-child(3) {
-        transform: translateY(-8px) rotate(-45deg);
+        transform: translateY(-0.5rem) rotate(-45deg);
       }
     }
 
@@ -160,10 +160,28 @@
   }
 
   &__link {
+    // @include flex($ai: center);
     @include text(base);
     position: relative;
     font-weight: bold;
     transition: color map-get($transition, 150);
+
+    &-number {
+      @include rounded-full;
+      @include flex($jc: center, $ai: center);
+      @include text(xs);
+      position: absolute;
+      top: -0.75rem;
+      right: -1rem;
+      text-align: center;
+      width: 100%;
+      height: 100%;
+      padding: 12px;
+      max-width: 1.375rem;
+      max-height: 1.375rem;
+      color: map-get($color, primary);
+      background-color: map-get($color, tertiary);
+    }
 
     @include md {
       @include text(xl);
@@ -186,9 +204,9 @@
     &::before {
       content: "";
       position: absolute;
-      bottom: -4px;
+      bottom: -0.375rem;
       width: 100%;
-      height: 2px;
+      height: 0.125rem;
       transform: scaleX(0);
       transform-origin: center;
       transition: map-get($transition, 150);
