--- a/src/scss/page/_Home.scss
+++ b/src/scss/page/_Home.scss
@@ -39,7 +39,6 @@
     position: relative;
     display: block;
     width: 100%;
-    // height: calc(100vh - deep-map-get($height, header, lg));
     height: 100vh;
 
     @include sm {
@@ -93,9 +92,10 @@
     top: 0;
     z-index: 10;
     height: 100%;
-    max-width: 1000px;
+    max-width: 62.5rem;
     padding-bottom: 6rem;
 
+    // 選中所有的直系子層
     & > :nth-child(n) {
       opacity: 0;
       transform: translateY(-20px);
@@ -103,6 +103,7 @@
       transition-property: transform, opacity;
     }
 
+    // 按照 index 依序 transition-delay
     @for $i from 1 through 3 {
       & > :nth-child(#{$i}) {
         transition-delay: $i * 150ms;
