--- a/src/scss/base/_global-styles.scss
+++ b/src/scss/base/_global-styles.scss
@@ -85,14 +85,13 @@ main {
     }
 }
 
+// 用於無內容時的文字大小
 .empty-msg {
     @include text(2xl);
-}
 
-// 目前用於無預告片時
-.placeholder-text {
-    @include text(2xl);
-    margin-top: 2rem;
+    @include sm {
+        @include text(lg);
+    }
 }
 
 .genres-tag {
@@ -103,6 +102,10 @@ main {
     color: map-get($color, secondary);
     background-color: map-get($color, primary);
     border-radius: 30px;
+
+    @include md {
+        @include text(xs);
+    }
 
     @include hover-query {
         &:hover {
@@ -117,9 +120,42 @@ main {
     }
 }
 
+// 資訊區(上映日期、評分、放映時長)
 .info {
     @include flex;
     column-gap: 1.5rem;
+
+    @include sm {
+        @include text(sm);
+        column-gap: 1rem;
+    }
+
+    // 除了首個子層以外，其餘皆套用以下樣式
+    & > p:not(:first-child) {
+        display: flex;
+
+        // 左側豎槓
+        &::before {
+            content: "";
+            display: block;
+            width: 1px;
+            height: 100%;
+            background-color: map-get($color, primary-dark);
+        }
+
+        i {
+            margin-left: 1.5rem;
+
+            @include sm {
+                margin-left: 0.75rem;
+            }
+        }
+    }
+
+    // info 內的 icon 統一設定 margin-right
+    i {
+        margin-right: 0.5rem;
+    }
 }
 
 .vote {
@@ -148,6 +184,7 @@ main {
     }
 }
 
+// 全螢幕 spinner 用於首頁與 MovieDetail.js 載入畫面
 .spinner-full-screen {
     @include flex($jc: center, $ai: center);
     visibility: hidden;
@@ -169,7 +206,3 @@ main {
         opacity: 1;
     }
 }
-
-// .intersection-animation {
-//     animation: intersection map-get($transition, 1000) forwards;
-// }
