[修改] 調整 Home.js 在 mobile 大小的 carousel 圖片尺寸 | [新增] carousel 電影資訊 icon

--- a/src/scss/base/_global-styles.scss
+++ b/src/scss/base/_global-styles.scss
@@ -160,8 +160,12 @@ main {
 
 .vote {
     i {
-        margin-left: 0.5rem;
+        // margin-left: 0.5rem;
     }
+}
+
+.overview {
+    letter-spacing: deep-map-get($text, spacing, wider);
 }
 
 .spinner {
