[修改] 將 Home.js 的 react-carousel 改成使用 swiper

--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -4,4 +4,5 @@
 @forward "GenresSwiper";
 @forward "MoviesCards";
 @forward "card";
-@forward "swiper";
+@forward "global-swiper";
+@forward "MovieSwiper";
