[修改中] MovieDetail swiper

--- a/src/scss/components/_movie-swiper.scss
+++ b/src/scss/components/_movie-swiper.scss
@@ -1,17 +1,14 @@
 @use "../abstracts" as *;
 
 .movie-swiper {
-  margin-left: auto;
-  margin-right: auto;
-
   // 底部分頁 bullet
   .swiper-pagination {
-    bottom: -8px;
+    bottom: -0.5rem;
     @include md {
       display: none;
     }
   }
-  
+
   .layout-title {
     @include md {
     }
@@ -19,15 +16,14 @@
 }
 
 .movie-slide {
-  width: 100%;
-  // * swiper 圖片連結
+  // * swiper 電影圖片連結
   &__img-link {
     display: inline-block;
     overflow: hidden;
     border-radius: map-get($border-radius, base);
   }
 
-  //* swiper 圖片
+  //* swiper 電影圖片
   &__img {
     width: 100%;
 
@@ -41,7 +37,6 @@
     // swiper poster 預設為隱藏，直到螢幕 <= 768px 後隱藏顯示
     &--poster {
       display: none;
-      
       @include md {
         display: inline-block;
       }
@@ -59,7 +54,8 @@
     }
   }
 
+  //* swiper 電影名稱
   &__title {
-    @include text(lg);
+    @include text(xl);
   }
 }
