--- a/src/scss/page/_MovieDetail.scss
+++ b/src/scss/page/_MovieDetail.scss
@@ -344,7 +344,7 @@
     border: 0;
   }
 
-  //* Similar Movies swiper (相似電影 swiper)
+  //* Similar Movies
   &__similar {
     @include x-spacing;
     padding-bottom: 2rem;
